# SNN_Event-based_Optical_Flow

./: .gitignore  ConvLIF_layer_export.py  GRAPHS.py  LIF_layer_export.py  Model_export.py  Model_export_RealQuant.py  ONNX_analyzer.py  README.md  analyze_voltage_dynamics.py  create_h5_from_raw.py  displacement_table.csv  eval_flow.py  eval_flow_FC.py  eval_flow_quant.py  import_h5py.py  model_print.py  param_extraction.py  plot_evaluation_comparison.py  plotter.ipynb  quant_model_export.py  requirements.txt  train_flow.py  train_flow_DDP.py  train_flow_FC.py  train_flow_quant.py  train_flow_val10%.py  train_flow_validation.py
ONNX_LIF_operator/: CMakeLists.txt  README.md  requirements.txt  setup.py
ONNX_LIF_operator/ONNX_LIF_operator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
ONNX_LIF_operator/src/: lif_op.cpp  lif_op.h
ONNX_LIF_operator/src/python/: lif_op.py
ONNX_LIF_operator/test/: test_lif_op.py
configs/: eval_MVSEC.yml  eval_MVSEC_FC.yml  eval_MVSEC_visual.yml  finetune_SNN.yml  parser.py  train_SNN.yml  train_SNN_FC.yml  validation_config.yml
dataloader/: __init__.py  base.py  h5.py  h5_patches.py
exported_models/: LIFFireNet_SNNtorch.onnx
loss/: flow.py
models/: SNNtorch_spiking_submodules.py  model.py  quantization_util.py  quantized_spiking_submodules.py  quantized_submodules.py  spiking_submodules.py  submodules.py  unet.py
tools/: plot_model_param.py
utils/: iwe.py  utils.py  visualization.py  visualization_fc.py
